# flare

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: deployments.rs  domains.rs  env.rs  health.rs  mod.rs  projects.rs  settings.rs  static_serve.rs  webhooks.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: analytics.rs  framework.rs  git.rs  mod.rs  poller.rs  webhooks.rs  worker.rs
docs/: ARCHITECTURE.md  CLI.md
frontend/: Dockerfile  nginx.conf  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
