[package]
name = "flare"
version = "0.1.0"
edition = "2021"
description = "Vercel-like deployment platform — Rust API"
license = "MIT"
default-run = "flare"

[[bin]]
name = "flare"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
regex = "1"
url = "2"
futures = "0.3"
tokio-stream = "0.1"
dashmap = "6"
parking_lot = "0.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
